[fp_aggregation] rdf function split into 2, ready to write average rdf function

--- a/paulssonlab/src/paulssonlab/projects/fp_aggregation/Agar pad analysis paircorr.ipynb
+++ b/paulssonlab/src/paulssonlab/projects/fp_aggregation/Agar pad analysis paircorr.ipynb
@@ -74,7 +74,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file = filenames[5]\n",
+    "file = filenames[11]\n",
     "print(\"file\", file)\n",
     "nd2 = nd2reader.ND2Reader(file)\n",
     "fov_index = 0\n",
@@ -96,7 +96,8 @@
    "source": [
     "seg = segment_phase(phase_img)\n",
     "fig, ax = plt.subplots()\n",
-    "ax.imshow(seg)"
+    "# ax.imshow(seg)\n",
+    "ax.imshow(permute_labels(seg))"
    ]
   },
   {
@@ -125,9 +126,85 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def rdf_single_ref_point(cell, ref_point, time_allowed=80, start_r=1, dr=1):\n",
+    "    #     returns rdf for a single reference point in a single cell.\n",
+    "    #     cell is a masked array, where the mask is False where the cell is, and True everywhere else.\n",
+    "    #     cell.data is the fluorescence intensity array.\n",
+    "    #     ref_point is a list of index pairs corresponding to the 'nucleus'.\n",
+    "    # rho is the average 'particle' density, where a particle corresponds to an intensity unit.\n",
+    "    rho = np.mean(cell)\n",
+    "    print(\"start_r\", start_r)\n",
+    "    r = start_r\n",
+    "    r_values = []\n",
+    "    #         masked_norm_fluor_img.mask is False where the cell is, and True outside.\n",
+    "    #         mask = np.copy(cell.mask)\n",
+    "    gr_values = []\n",
+    "    previous_r_vol = 0\n",
+    "    while np.count_nonzero(cell.mask == 0) > 0:\n",
+    "        #             While the cell mask still has 'False' values i.e. not all values have been used in the\n",
+    "        #             pair correlation function calculation somewhere.\n",
+    "        #             Get indices of the points within the current radius (r) of the ref point.\n",
+    "        indices_in_r = get_indices_in_r(ref_point, r)\n",
+    "        flat_indices_in_r = [item for sublist in indices_in_r for item in sublist]\n",
+    "        img_shape = np.shape(cell)\n",
+    "        if any(flat_indices_in_r >= np.min(img_shape)):\n",
+    "            indices_to_delete_0 = np.where(indices_in_r[0] >= img_shape[0])[0]\n",
+    "            indices_to_delete_1 = np.where(indices_in_r[1] >= img_shape[1])[0]\n",
+    "            indices_to_delete = np.concatenate(\n",
+    "                (indices_to_delete_0, indices_to_delete_1)\n",
+    "            )\n",
+    "            indices_to_delete = np.unique(indices_to_delete)\n",
+    "            indices_in_r[0] = np.delete(indices_in_r[0], indices_to_delete)\n",
+    "            indices_in_r[1] = np.delete(indices_in_r[1], indices_to_delete)\n",
+    "        # Calculate numerator (gr_num) and volume element (gr_vol)\n",
+    "        # gr_num should be the sum total of intensities of points in the current shell.\n",
+    "        #             Since the cell is masked, we don't need to worry about the non-cell regions.\n",
+    "        #             print(cell[list(map(int, indices_in_r[0])), list(map(int, indices_in_r[1]))])\n",
+    "        gr_num = np.sum(\n",
+    "            cell[list(map(int, indices_in_r[0])), list(map(int, indices_in_r[1]))]\n",
+    "        )\n",
+    "        print(\"gr num\", gr_num)\n",
+    "        #             gr_num_all and gr diff are just to check that the cell masking is working.\n",
+    "        #         gr_num_all = np.sum(cell.data[list(map(int, indices_in_r[0])), list(map(int, indices_in_r[1]))])\n",
+    "        #         print('gr num all',gr_num_all)\n",
+    "        #         print('gr diff',gr_num_all-gr_num)\n",
+    "        # gr_vol should be the number of points in the current shell.\n",
+    "        #             Note that the mask masks both the background and the previous regions that we have considered,\n",
+    "        #             so we simply subtract these from our list of indices in the current radius.\n",
+    "        gr_vol = len(indices_in_r[0]) - np.count_nonzero(\n",
+    "            cell.mask[list(map(int, indices_in_r[0])), list(map(int, indices_in_r[1]))]\n",
+    "        )\n",
+    "        #             update the 'previous_r_vol' for the next radius shell.\n",
+    "        print(\"previous r vol\", previous_r_vol)\n",
+    "        previous_r_vol = gr_vol\n",
+    "        print(\"gr vol\", gr_vol)\n",
+    "        #             Update the cell mask so that the values we have now included are not included\n",
+    "        #             in the next dr calculation.\n",
+    "        cell.mask[\n",
+    "            list(map(int, indices_in_r[0])), list(map(int, indices_in_r[1]))\n",
+    "        ] = True\n",
+    "        #             print('number of non masked values',np.count_nonzero(cell.mask==0))\n",
+    "        gr_values.append(gr_num / gr_vol)\n",
+    "        r_values.append(r)\n",
+    "        r += dr\n",
+    "    # Since rho is constant for all r, divide all at the same time to save on number of computations.\n",
+    "    gr_values = np.array(gr_values)\n",
+    "    #         print('gr_values before rho',gr_values)\n",
+    "    gr_values = np.divide(gr_values, rho)\n",
+    "    #         print('gr_values divided by rho',gr_values)\n",
+    "    return r_values, gr_values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def rdf(\n",
     "    phase_img,\n",
     "    fluor_img,\n",
+    "    ref_point_val=\"max\",\n",
     "    cell_indices=[0],\n",
     "    time_allowed=80,\n",
     "    filename=\"20200603rdf\",\n",
@@ -136,16 +213,19 @@
     "):\n",
     "    # Segment the image.\n",
     "    seg = segment_phase(phase_img)\n",
-    "    #     Get the bakground fluorescence of the image, to subtract from all cell fluorescence.\n",
+    "    #     Get the background fluorescence of the image, to subtract from all cell fluorescence.\n",
     "    min_fluor = np.amin(fluor_img)\n",
     "    # Get number of cells in the image.\n",
     "    cells = np.amax(seg)\n",
+    "    if cell_indices == \"all\":\n",
+    "        cell_indices = np.arange(cells)\n",
     "    # all_r_values will be a list of lists of r values, while all_gr_values will be a list of lists, with\n",
     "    # the corresponding g(r) (pair correlation function) values. The overall function will return\n",
     "    # all_r_values, all_gr_values.\n",
     "    all_r_values = []\n",
     "    all_gr_values = []\n",
     "    for cell_index in cell_indices:\n",
+    "        print(cell_index)\n",
     "        if cell_index > cells:\n",
     "            print(\"Error in rdf: cell_index larger than number of cells in fov.\")\n",
     "            pass\n",
@@ -155,86 +235,71 @@
     "        cell = (cell - min_fluor) / np.mean(cell)\n",
     "        #         ref_point is the 'nucleus' i.e. the point relative to which the pair\n",
     "        #         correlation function is to be calculated. For now, we set it to the\n",
-    "        #         maximum fluorescence intensity pint of the cell.\n",
-    "        ref_point = np.where(cell == np.amax(cell))\n",
-    "        #         If there is more than one maximum fluorescence point, take the first one of these.\n",
-    "        if len(ref_point[0]) > 1:\n",
-    "            ref_point = (ref_point[0][0], ref_point[1][0])\n",
-    "        # rho is the average 'particle' density, where a particle corresponds to an intensity unit.\n",
-    "        rho = np.mean(cell)\n",
-    "        #         print('rho',rho)\n",
-    "        r = start_r\n",
-    "        r_values = []\n",
-    "        #         cell.mask is False where the cell is, and True outside.\n",
-    "        mask = np.copy(cell.mask)\n",
-    "        gr_values = []\n",
-    "        previous_r_vol = 0\n",
-    "        while np.count_nonzero(cell.mask == 0) > 0:\n",
-    "            #             While the cell mask still has 'False' values i.e. not all values have been used in the\n",
-    "            #             pair correlation function calculation somewhere.\n",
-    "            #             Get indices of the points within the current radius (r) of the ref point.\n",
-    "            indices_in_r = get_indices_in_r(ref_point, r)\n",
-    "            flat_indices_in_r = [item for sublist in indices_in_r for item in sublist]\n",
-    "            img_shape = np.shape(fluor_img)\n",
-    "            if any(flat_indices_in_r >= np.min(img_shape)):\n",
-    "                indices_to_delete_0 = np.where(indices_in_r[0] >= img_shape[0])[0]\n",
-    "                indices_to_delete_1 = np.where(indices_in_r[1] >= img_shape[1])[0]\n",
-    "                indices_to_delete = np.concatenate(\n",
-    "                    (indices_to_delete_0, indices_to_delete_1)\n",
-    "                )\n",
-    "                indices_to_delete = np.unique(indices_to_delete)\n",
-    "                indices_in_r[0] = np.delete(indices_in_r[0], indices_to_delete)\n",
-    "                indices_in_r[1] = np.delete(indices_in_r[1], indices_to_delete)\n",
-    "            #                 indices_in_r[0] = np.delete(indices_in_r[0], np.where(indices_in_r[0] >= img_shape[0]))\n",
-    "            #                 indices_in_r[1] = np.delete(indices_in_r[1], np.where(indices_in_r[1] >= img_shape[1]))\n",
+    "        #         maximum fluorescence intensity point of the cell.\n",
+    "        if ref_point_val == \"max\":\n",
+    "            ref_point = np.where(cell == np.amax(cell))\n",
+    "            #         If there is more than one maximum fluorescence point, take the first one of these.\n",
+    "            if len(ref_point[0]) > 1:\n",
+    "                ref_point = (ref_point[0][0], ref_point[1][0])\n",
+    "        else:\n",
+    "            ref_point = ref_point\n",
+    "            print(cell_index, ref_point, np.count_nonzero(cell.mask == 0))\n",
     "\n",
-    "            #                     if indices_in_r[0][i]>=img_shape[0] or indices_in_r[1][i]>=img_shape[1]:\n",
-    "            #                         print('deleting0')\n",
-    "            #                         del indices_in_r[0][index]\n",
-    "            #                         del indices_in_r[1][index]\n",
-    "            #             print('indicesinr',indices_in_r)\n",
-    "            # Calculate numerator (gr_num) and volume element (gr_vol)\n",
-    "            # gr_num should be the sum total of intensities of points in the current shell.\n",
-    "            #             Since cell is masked, we don't need to worry about the non-cell regions.\n",
-    "            #             print(cell[list(map(int, indices_in_r[0])), list(map(int, indices_in_r[1]))])\n",
-    "            gr_num = np.sum(\n",
-    "                cell[list(map(int, indices_in_r[0])), list(map(int, indices_in_r[1]))]\n",
-    "            )\n",
-    "            #             print('gr num',cell_index,gr_num)\n",
-    "            #             gr_num_all and gr diff are just to check that the cell masking is working.\n",
-    "            gr_num_all = np.sum(\n",
-    "                cell.data[\n",
-    "                    list(map(int, indices_in_r[0])), list(map(int, indices_in_r[1]))\n",
-    "                ]\n",
-    "            )\n",
-    "            #             print('gr num all',cell_index,gr_num_all)\n",
-    "            #             print('gr diff',cell_index,gr_num_all-gr_num)\n",
-    "            # gr_vol should be the number of points in the current shell.\n",
-    "            #             Note that the mask masks both the background and the previous regions that we have considered,\n",
-    "            #             so we simply subtract these from our list of indices in the current radius.\n",
-    "            gr_vol = len(indices_in_r[0]) - np.count_nonzero(\n",
-    "                cell.mask[\n",
-    "                    list(map(int, indices_in_r[0])), list(map(int, indices_in_r[1]))\n",
-    "                ]\n",
-    "            )\n",
-    "            #             update the 'previous_r_vol' for the next radius shell.\n",
-    "            #             print('previous r vol',cell_index,previous_r_vol)\n",
-    "            previous_r_vol = gr_vol\n",
-    "            #             print('gr vol',cell_index,gr_vol)\n",
-    "            #             Update the cell mask so that the values we have now included are not included\n",
-    "            #             in the next dr calculation.\n",
-    "            cell.mask[\n",
-    "                list(map(int, indices_in_r[0])), list(map(int, indices_in_r[1]))\n",
-    "            ] = True\n",
-    "            #             print('number of non masked values',np.count_nonzero(cell.mask==0))\n",
-    "            gr_values.append(gr_num / gr_vol)\n",
-    "            r_values.append(r)\n",
-    "            r += dr\n",
-    "        # Since rho is constant for all r, divide all at the same time to save on number of computations.\n",
-    "        gr_values = np.array(gr_values)\n",
-    "        #         print('gr_values beofre rho',gr_values)\n",
-    "        gr_values = np.divide(gr_values, rho)\n",
-    "        #         print('gr_values divided by rho',gr_values)\n",
+    "        # rho is the average 'particle' density, where a particle corresponds to an intensity unit.\n",
+    "        r_values, gr_values = rdf_single_ref_point(\n",
+    "            cell, ref_point, time_allowed=80, start_r=start_r, dr=dr\n",
+    "        )\n",
+    "        #         rho = np.mean(cell)\n",
+    "        #         r=start_r\n",
+    "        #         r_values = []\n",
+    "        # #         cell.mask is False where the cell is, and True outside.\n",
+    "        #         mask = np.copy(cell.mask)\n",
+    "        #         gr_values = []\n",
+    "        #         previous_r_vol = 0\n",
+    "        #         while np.count_nonzero(cell.mask==0)>0:\n",
+    "        # #             While the cell mask still has 'False' values i.e. not all values have been used in the\n",
+    "        # #             pair correlation function calculation somewhere.\n",
+    "        # #             Get indices of the points within the current radius (r) of the ref point.\n",
+    "        #             indices_in_r = get_indices_in_r(ref_point,r)\n",
+    "        #             flat_indices_in_r = [item for sublist in indices_in_r for item in sublist]\n",
+    "        #             img_shape = np.shape(fluor_img)\n",
+    "        #             if any(flat_indices_in_r>=np.min(img_shape)):\n",
+    "        #                 indices_to_delete_0 = np.where(indices_in_r[0] >= img_shape[0])[0]\n",
+    "        #                 indices_to_delete_1 = np.where(indices_in_r[1] >= img_shape[1])[0]\n",
+    "        #                 indices_to_delete = np.concatenate((indices_to_delete_0,indices_to_delete_1))\n",
+    "        #                 indices_to_delete = np.unique(indices_to_delete)\n",
+    "        #                 indices_in_r[0] = np.delete(indices_in_r[0],indices_to_delete)\n",
+    "        #                 indices_in_r[1] = np.delete(indices_in_r[1],indices_to_delete)\n",
+    "        #             # Calculate numerator (gr_num) and volume element (gr_vol)\n",
+    "        #             # gr_num should be the sum total of intensities of points in the current shell.\n",
+    "        # #             Since cell is masked, we don't need to worry about the non-cell regions.\n",
+    "        # #             print(cell[list(map(int, indices_in_r[0])), list(map(int, indices_in_r[1]))])\n",
+    "        #             gr_num = np.sum(cell[list(map(int, indices_in_r[0])), list(map(int, indices_in_r[1]))])\n",
+    "        # #             print('gr num',cell_index,gr_num)\n",
+    "        # #             gr_num_all and gr diff are just to check that the cell masking is working.\n",
+    "        #             gr_num_all = np.sum(cell.data[list(map(int, indices_in_r[0])), list(map(int, indices_in_r[1]))])\n",
+    "        # #             print('gr num all',cell_index,gr_num_all)\n",
+    "        # #             print('gr diff',cell_index,gr_num_all-gr_num)\n",
+    "        #             # gr_vol should be the number of points in the current shell.\n",
+    "        # #             Note that the mask masks both the background and the previous regions that we have considered,\n",
+    "        # #             so we simply subtract these from our list of indices in the current radius.\n",
+    "        #             gr_vol = len(indices_in_r[0])-np.count_nonzero(cell.mask[list(map(int, indices_in_r[0])), list(map(int, indices_in_r[1]))])\n",
+    "        # #             update the 'previous_r_vol' for the next radius shell.\n",
+    "        # #             print('previous r vol',cell_index,previous_r_vol)\n",
+    "        #             previous_r_vol = gr_vol\n",
+    "        # #             print('gr vol',cell_index,gr_vol)\n",
+    "        # #             Update the cell mask so that the values we have now included are not included\n",
+    "        # #             in the next dr calculation.\n",
+    "        #             cell.mask[list(map(int, indices_in_r[0])), list(map(int, indices_in_r[1]))] = True\n",
+    "        # #             print('number of non masked values',np.count_nonzero(cell.mask==0))\n",
+    "        #             gr_values.append(gr_num/gr_vol)\n",
+    "        #             r_values.append(r)\n",
+    "        #             r+=dr\n",
+    "        #         # Since rho is constant for all r, divide all at the same time to save on number of computations.\n",
+    "        #         gr_values = np.array(gr_values)\n",
+    "        # #         print('gr_values beofre rho',gr_values)\n",
+    "        #         gr_values = np.divide(gr_values,rho)\n",
+    "        # #         print('gr_values divided by rho',gr_values)\n",
     "        all_gr_values.append(gr_values)\n",
     "        all_r_values.append(r_values)\n",
     "    return all_r_values, all_gr_values"
@@ -247,10 +312,8 @@
    "outputs": [],
    "source": [
     "# Test using seg as the fluor image, since this should return g(r) = 1 for all r.\n",
-    "# r_values_list, gr_values_list = rdf(phase_img,seg,cell_indices=np.arange(6),dr=10)\n",
-    "r_values_list, gr_values_list = rdf(\n",
-    "    phase_img, fluor_img, cell_indices=np.arange(20), dr=1\n",
-    ")"
+    "r_values_list, gr_values_list = rdf(phase_img, seg, cell_indices=np.arange(6), dr=10)\n",
+    "# r_values_list, gr_values_list = rdf(phase_img,fluor_img,cell_indices=np.arange(6),dr=1)"
    ]
   },
   {
@@ -263,7 +326,7 @@
     "for i in range(len(r_values_list)):\n",
     "    ax.plot(r_values_list[i], gr_values_list[i])\n",
     "ax.axhline(y=1, ls=\":\", color=\"k\")\n",
-    "fig.savefig(\"20200613_P_GFPmut3_40x\")"
+    "fig.savefig(\"20200614_P_sfGFP_40x_2\")"
    ]
   },
   {
