--- a/paulssonlab/src/paulssonlab/projects/fp_aggregation/Agar pad analysis testing.ipynb
+++ b/paulssonlab/src/paulssonlab/projects/fp_aggregation/Agar pad analysis testing.ipynb
@@ -72,8 +72,8 @@
     "        fov_index = 0\n",
     "        phase_image = nd2.get_frame_2D(v=0, c=0, z=fov_index)\n",
     "        fluor_image = nd2.get_frame_2D(v=0, c=1, z=fov_index)\n",
-    "        fig, axes = plt.subplots(1, 2, sharex=True, sharey=True)\n",
-    "        ax = axes.ravel()\n",
+    "    #         fig, axes = plt.subplots(1, 2, sharex=True, sharey=True)\n",
+    "    #         ax = axes.ravel()\n",
     "    #         ax[0].imshow(phase_image)\n",
     "    #         ax[1].imshow(fluor_image, cmap=\"RdGy\")\n",
     "    except ValueError:\n",
