[fp_aggregation] weighted mean average, need to do more rigorous maths of how to interpret what x exactly y axis corresponds to in the maybe autocorrelation plots

--- a/paulssonlab/src/paulssonlab/projects/fp_aggregation/Agar pad analysis paircorr.ipynb
+++ b/paulssonlab/src/paulssonlab/projects/fp_aggregation/Agar pad analysis paircorr.ipynb
@@ -17,6 +17,7 @@
     "from skimage.feature import blob_dog, blob_log, blob_doh\n",
     "from paulssonlab.projects.molecule_counting.segmentation import segment, invert\n",
     "from paulssonlab.projects.molecule_counting.matriarch_stub import permute_labels\n",
+    "import itertools\n",
     "\n",
     "# import cv2\n",
     "from matplotlib.offsetbox import TextArea, DrawingArea, OffsetImage, AnnotationBbox\n",
@@ -74,7 +75,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file = filenames[11]\n",
+    "file = filenames[4]\n",
     "print(\"file\", file)\n",
     "nd2 = nd2reader.ND2Reader(file)\n",
     "fov_index = 0\n",
@@ -126,14 +127,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def rdf_single_ref_point(cell, ref_point, time_allowed=80, start_r=1, dr=1):\n",
+    "def rdf_single_ref_point_single_cell(\n",
+    "    cell, ref_point, time_allowed=80, start_r=1, dr=1, intensity_weighted=True\n",
+    "):\n",
     "    #     returns rdf for a single reference point in a single cell.\n",
     "    #     cell is a masked array, where the mask is False where the cell is, and True everywhere else.\n",
     "    #     cell.data is the fluorescence intensity array.\n",
-    "    #     ref_point is a list of index pairs corresponding to the 'nucleus'.\n",
+    "    #     ref_point is a tuple of 2 arrays, corresponding to the indices of the location of the 'nucleus'\n",
     "    # rho is the average 'particle' density, where a particle corresponds to an intensity unit.\n",
+    "    #     if intensity_weighted:\n",
+    "    #         rho = np.sum(cell)\n",
+    "    #     else:\n",
+    "    #         rho = np.mean(cell)\n",
     "    rho = np.mean(cell)\n",
-    "    print(\"start_r\", start_r)\n",
     "    r = start_r\n",
     "    r_values = []\n",
     "    #         masked_norm_fluor_img.mask is False where the cell is, and True outside.\n",
@@ -141,12 +147,14 @@
     "    gr_values = []\n",
     "    previous_r_vol = 0\n",
     "    while np.count_nonzero(cell.mask == 0) > 0:\n",
+    "        #         print('points remaining',np.count_nonzero(cell.mask==0))\n",
     "        #             While the cell mask still has 'False' values i.e. not all values have been used in the\n",
     "        #             pair correlation function calculation somewhere.\n",
     "        #             Get indices of the points within the current radius (r) of the ref point.\n",
     "        indices_in_r = get_indices_in_r(ref_point, r)\n",
     "        flat_indices_in_r = [item for sublist in indices_in_r for item in sublist]\n",
     "        img_shape = np.shape(cell)\n",
+    "        #         Remove indices pairs which fall outside the image.\n",
     "        if any(flat_indices_in_r >= np.min(img_shape)):\n",
     "            indices_to_delete_0 = np.where(indices_in_r[0] >= img_shape[0])[0]\n",
     "            indices_to_delete_1 = np.where(indices_in_r[1] >= img_shape[1])[0]\n",
@@ -159,25 +167,19 @@
     "        # Calculate numerator (gr_num) and volume element (gr_vol)\n",
     "        # gr_num should be the sum total of intensities of points in the current shell.\n",
     "        #             Since the cell is masked, we don't need to worry about the non-cell regions.\n",
-    "        #             print(cell[list(map(int, indices_in_r[0])), list(map(int, indices_in_r[1]))])\n",
     "        gr_num = np.sum(\n",
     "            cell[list(map(int, indices_in_r[0])), list(map(int, indices_in_r[1]))]\n",
     "        )\n",
-    "        print(\"gr num\", gr_num)\n",
-    "        #             gr_num_all and gr diff are just to check that the cell masking is working.\n",
-    "        #         gr_num_all = np.sum(cell.data[list(map(int, indices_in_r[0])), list(map(int, indices_in_r[1]))])\n",
-    "        #         print('gr num all',gr_num_all)\n",
-    "        #         print('gr diff',gr_num_all-gr_num)\n",
+    "        #         print('grnum',gr_num)\n",
     "        # gr_vol should be the number of points in the current shell.\n",
     "        #             Note that the mask masks both the background and the previous regions that we have considered,\n",
     "        #             so we simply subtract these from our list of indices in the current radius.\n",
     "        gr_vol = len(indices_in_r[0]) - np.count_nonzero(\n",
     "            cell.mask[list(map(int, indices_in_r[0])), list(map(int, indices_in_r[1]))]\n",
     "        )\n",
+    "        #         print('gr vol',gr_vol)\n",
     "        #             update the 'previous_r_vol' for the next radius shell.\n",
-    "        print(\"previous r vol\", previous_r_vol)\n",
     "        previous_r_vol = gr_vol\n",
-    "        print(\"gr vol\", gr_vol)\n",
     "        #             Update the cell mask so that the values we have now included are not included\n",
     "        #             in the next dr calculation.\n",
     "        cell.mask[\n",
@@ -189,10 +191,53 @@
     "        r += dr\n",
     "    # Since rho is constant for all r, divide all at the same time to save on number of computations.\n",
     "    gr_values = np.array(gr_values)\n",
-    "    #         print('gr_values before rho',gr_values)\n",
     "    gr_values = np.divide(gr_values, rho)\n",
-    "    #         print('gr_values divided by rho',gr_values)\n",
     "    return r_values, gr_values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def rdf_multi_ref_point_single_cell(\n",
+    "    cell, ref_points, time_allowed=80, start_r=1, dr=1, intensity_weighted=True\n",
+    "):\n",
+    "    #     cell is a masked array, where the mask is False where the cell is, and True everywhere else.\n",
+    "    #     returns r_values, gr_values for one cell, where gr_values is the average gr over the\n",
+    "    #     ref_points.\n",
+    "    #     ref_points should be a tuple of 2 arrays, where the first array is the axis 0\n",
+    "    #     indices, and second array is the axis 1 indices, as we would get from np.where\n",
+    "    max_r_values = []\n",
+    "    all_gr_values = []\n",
+    "    total_cell_intensity = np.sum(cell)\n",
+    "    pixels_in_cell = np.count_nonzero(cell.mask == 0)\n",
+    "    for i in range(len(ref_points[0])):\n",
+    "        cell_for_analysis = np.ma.copy(cell)\n",
+    "        ref_point_0, ref_point_1 = ref_points[0][i], ref_points[1][i]\n",
+    "        r_values, gr_values = rdf_single_ref_point_single_cell(\n",
+    "            cell_for_analysis,\n",
+    "            (np.array(ref_point_0), np.array(ref_point_1)),\n",
+    "            time_allowed=80,\n",
+    "            start_r=start_r,\n",
+    "            dr=dr,\n",
+    "            intensity_weighted=intensity_weighted,\n",
+    "        )\n",
+    "        if intensity_weighted:\n",
+    "            gr_values *= cell.data[ref_point_0][ref_point_1]\n",
+    "        if len(r_values) > len(max_r_values):\n",
+    "            max_r_values = r_values\n",
+    "        all_gr_values.append(gr_values)\n",
+    "    gr_values_length_corrected = list(\n",
+    "        itertools.zip_longest(*all_gr_values, fillvalue=np.nan)\n",
+    "    )\n",
+    "    mean_gr_values = [np.nanmean(i) for i in gr_values_length_corrected]\n",
+    "    if intensity_weighted:\n",
+    "        mean_gr_values = np.multiply(\n",
+    "            pixels_in_cell, mean_gr_values / total_cell_intensity\n",
+    "        )\n",
+    "    return max_r_values, mean_gr_values"
    ]
   },
   {
@@ -207,9 +252,10 @@
     "    ref_point_val=\"max\",\n",
     "    cell_indices=[0],\n",
     "    time_allowed=80,\n",
-    "    filename=\"20200603rdf\",\n",
+    "    savetxt=\"rdf\",\n",
     "    start_r=1,\n",
     "    dr=1,\n",
+    "    intensity_weighted=True,\n",
     "):\n",
     "    # Segment the image.\n",
     "    seg = segment_phase(phase_img)\n",
@@ -225,14 +271,15 @@
     "    all_r_values = []\n",
     "    all_gr_values = []\n",
     "    for cell_index in cell_indices:\n",
-    "        print(cell_index)\n",
+    "        print(\"cell index\", cell_index)\n",
     "        if cell_index > cells:\n",
     "            print(\"Error in rdf: cell_index larger than number of cells in fov.\")\n",
     "            pass\n",
     "        #         Mask the fluorescence image everywhere except for the cell.\n",
     "        cell = np.ma.masked_where(seg != cell_index + 1, fluor_img)\n",
     "        # Normalise the intensities of the cell.\n",
-    "        cell = (cell - min_fluor) / np.mean(cell)\n",
+    "        #         mean_int_cell = np.mean(cell)\n",
+    "        cell -= min_fluor\n",
     "        #         ref_point is the 'nucleus' i.e. the point relative to which the pair\n",
     "        #         correlation function is to be calculated. For now, we set it to the\n",
     "        #         maximum fluorescence intensity point of the cell.\n",
@@ -240,68 +287,25 @@
     "            ref_point = np.where(cell == np.amax(cell))\n",
     "            #         If there is more than one maximum fluorescence point, take the first one of these.\n",
     "            if len(ref_point[0]) > 1:\n",
-    "                ref_point = (ref_point[0][0], ref_point[1][0])\n",
+    "                ref_point = (np.array([ref_point[0][0]]), np.array([ref_point[1][0]]))\n",
+    "        elif ref_point_val == \"all\":\n",
+    "            ref_point = np.where(cell.mask == 0)\n",
     "        else:\n",
-    "            ref_point = ref_point\n",
-    "            print(cell_index, ref_point, np.count_nonzero(cell.mask == 0))\n",
-    "\n",
-    "        # rho is the average 'particle' density, where a particle corresponds to an intensity unit.\n",
-    "        r_values, gr_values = rdf_single_ref_point(\n",
-    "            cell, ref_point, time_allowed=80, start_r=start_r, dr=dr\n",
+    "            ref_point = ref_point_val\n",
+    "        r_values, gr_values = rdf_multi_ref_point_single_cell(\n",
+    "            cell,\n",
+    "            ref_point,\n",
+    "            time_allowed=80,\n",
+    "            start_r=start_r,\n",
+    "            dr=dr,\n",
+    "            intensity_weighted=intensity_weighted,\n",
     "        )\n",
-    "        #         rho = np.mean(cell)\n",
-    "        #         r=start_r\n",
-    "        #         r_values = []\n",
-    "        # #         cell.mask is False where the cell is, and True outside.\n",
-    "        #         mask = np.copy(cell.mask)\n",
-    "        #         gr_values = []\n",
-    "        #         previous_r_vol = 0\n",
-    "        #         while np.count_nonzero(cell.mask==0)>0:\n",
-    "        # #             While the cell mask still has 'False' values i.e. not all values have been used in the\n",
-    "        # #             pair correlation function calculation somewhere.\n",
-    "        # #             Get indices of the points within the current radius (r) of the ref point.\n",
-    "        #             indices_in_r = get_indices_in_r(ref_point,r)\n",
-    "        #             flat_indices_in_r = [item for sublist in indices_in_r for item in sublist]\n",
-    "        #             img_shape = np.shape(fluor_img)\n",
-    "        #             if any(flat_indices_in_r>=np.min(img_shape)):\n",
-    "        #                 indices_to_delete_0 = np.where(indices_in_r[0] >= img_shape[0])[0]\n",
-    "        #                 indices_to_delete_1 = np.where(indices_in_r[1] >= img_shape[1])[0]\n",
-    "        #                 indices_to_delete = np.concatenate((indices_to_delete_0,indices_to_delete_1))\n",
-    "        #                 indices_to_delete = np.unique(indices_to_delete)\n",
-    "        #                 indices_in_r[0] = np.delete(indices_in_r[0],indices_to_delete)\n",
-    "        #                 indices_in_r[1] = np.delete(indices_in_r[1],indices_to_delete)\n",
-    "        #             # Calculate numerator (gr_num) and volume element (gr_vol)\n",
-    "        #             # gr_num should be the sum total of intensities of points in the current shell.\n",
-    "        # #             Since cell is masked, we don't need to worry about the non-cell regions.\n",
-    "        # #             print(cell[list(map(int, indices_in_r[0])), list(map(int, indices_in_r[1]))])\n",
-    "        #             gr_num = np.sum(cell[list(map(int, indices_in_r[0])), list(map(int, indices_in_r[1]))])\n",
-    "        # #             print('gr num',cell_index,gr_num)\n",
-    "        # #             gr_num_all and gr diff are just to check that the cell masking is working.\n",
-    "        #             gr_num_all = np.sum(cell.data[list(map(int, indices_in_r[0])), list(map(int, indices_in_r[1]))])\n",
-    "        # #             print('gr num all',cell_index,gr_num_all)\n",
-    "        # #             print('gr diff',cell_index,gr_num_all-gr_num)\n",
-    "        #             # gr_vol should be the number of points in the current shell.\n",
-    "        # #             Note that the mask masks both the background and the previous regions that we have considered,\n",
-    "        # #             so we simply subtract these from our list of indices in the current radius.\n",
-    "        #             gr_vol = len(indices_in_r[0])-np.count_nonzero(cell.mask[list(map(int, indices_in_r[0])), list(map(int, indices_in_r[1]))])\n",
-    "        # #             update the 'previous_r_vol' for the next radius shell.\n",
-    "        # #             print('previous r vol',cell_index,previous_r_vol)\n",
-    "        #             previous_r_vol = gr_vol\n",
-    "        # #             print('gr vol',cell_index,gr_vol)\n",
-    "        # #             Update the cell mask so that the values we have now included are not included\n",
-    "        # #             in the next dr calculation.\n",
-    "        #             cell.mask[list(map(int, indices_in_r[0])), list(map(int, indices_in_r[1]))] = True\n",
-    "        # #             print('number of non masked values',np.count_nonzero(cell.mask==0))\n",
-    "        #             gr_values.append(gr_num/gr_vol)\n",
-    "        #             r_values.append(r)\n",
-    "        #             r+=dr\n",
-    "        #         # Since rho is constant for all r, divide all at the same time to save on number of computations.\n",
-    "        #         gr_values = np.array(gr_values)\n",
-    "        # #         print('gr_values beofre rho',gr_values)\n",
-    "        #         gr_values = np.divide(gr_values,rho)\n",
-    "        # #         print('gr_values divided by rho',gr_values)\n",
     "        all_gr_values.append(gr_values)\n",
     "        all_r_values.append(r_values)\n",
+    "    if savetxt:\n",
+    "        all_r_to_save = np.concatenate(all_r_values).ravel()\n",
+    "        all_gr_to_save = np.concatenate(all_gr_values).ravel()\n",
+    "        np.savetxt(savetxt, np.transpose(np.array([all_r_to_save, all_gr_to_save])))\n",
     "    return all_r_values, all_gr_values"
    ]
   },
@@ -312,8 +316,20 @@
    "outputs": [],
    "source": [
     "# Test using seg as the fluor image, since this should return g(r) = 1 for all r.\n",
-    "r_values_list, gr_values_list = rdf(phase_img, seg, cell_indices=np.arange(6), dr=10)\n",
-    "# r_values_list, gr_values_list = rdf(phase_img,fluor_img,cell_indices=np.arange(6),dr=1)"
+    "# r_values_list, gr_values_list = rdf(phase_img,seg,cell_indices=np.arange(6),\n",
+    "#                                     ref_point_val='max',dr=1,\n",
+    "#                                    intensity_weighted=True)\n",
+    "r_values_list, gr_values_list = rdf(\n",
+    "    phase_img,\n",
+    "    fluor_img,\n",
+    "    cell_indices=np.arange(10),\n",
+    "    ref_point_val=\"all\",\n",
+    "    dr=1,\n",
+    "    savetxt=\"20200614_autocorr/20200614_P_GFPmut3_20x_meanallpoints_autocorr\",\n",
+    "    intensity_weighted=True,\n",
+    ")\n",
+    "# print(r_values_list)\n",
+    "# print(gr_values_list)"
    ]
   },
   {
@@ -326,8 +342,15 @@
     "for i in range(len(r_values_list)):\n",
     "    ax.plot(r_values_list[i], gr_values_list[i])\n",
     "ax.axhline(y=1, ls=\":\", color=\"k\")\n",
-    "fig.savefig(\"20200614_P_sfGFP_40x_2\")"
+    "fig.savefig(\"20200614_autocorr/20200614_P_GFPmut3_20x_meanallpoints_autocorr\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
